fix for real connection test